# XLN

./: .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md  build_vs-linux.sh  run_vs-linux.sh
Test/: CMakeLists.txt
Test/GTest/: CMakeLists.txt  GTestApplication.cpp  GTestApplication.h  main.cpp  main.mm
Test/GTest/GTestApp/: settings.gradle
Test/GTest/GTestApp/app/: build.gradle  proguard-rules.pro
Test/GTest/GTestApp/app/src/androidTest/java/xln/gtestapp/: ExampleInstrumentedTest.java
Test/GTest/GTestApp/app/src/main/: AndroidManifest.xml
Test/GTest/GTestApp/app/src/main/res/values/: strings.xml
Test/GTest/GTestApp/gradle/wrapper/: gradle-wrapper.properties
Test/GTest/Test/: FutureThrift.thrift  TestFolly.cpp  TestGrpc.cpp  TestThrift.cpp  TestThrift.thrift
Test/GTest/asset/: XLNConfig.json
Test/TestClient/TestAndroid/TestBed/app/: CMakeLists.txt  build.gradle  proguard-rules.pro
Test/TestClient/TestAndroid/TestBed/app/src/main/: AndroidManifest.xml
Test/TestClient/TestAndroid/TestBed/app/src/main/cpp/: native-lib.cpp
Test/TestClient/TestIOS/: CMakeLists.txt  main.mm
Test/TestServer/TestServer/: CMakeLists.txt  EntityService.thrift  TestServerSystemFactoryService.cpp  TestServerSystemFactoryService.h  main.cpp
Test/TestServer/TestServerClient/: CMakeLists.txt  TestServerClientSystemFactoryService.cpp  TestServerClientSystemFactoryService.h  main.cpp
XLN/Client/: CMakeLists.txt  ClientExecutorService.h  CurlPool.cpp  CurlPool.h  DownloadService.cpp  DownloadService.h  DownloaderEventCurl.cpp  DownloaderEventCurl.h  GameApplication.cpp  GameApplication.h  ScopeTimer.cpp  ScopeTimer.h  Task.cpp  Task.h  Timer.cpp  Timer.h
XLN/Core/: CMakeLists.txt
XLN/Core/Config/: Config.h  Math.h  Memory.h  Module.h  New.h  Platform.h  Type.h
XLN/Core/DebugHelper/: Assert.cpp  Assert.h  Fwd.h  MemObj.cpp  MemObj.h  MemoryMgr.cpp  MemoryMgr.h
XLN/Core/DebugHelper/Memory/: ExternalMemAllocator.cpp  ExternalMemAllocator.h  MemAllocator.h  MemTrackAllocator.cpp  MemTrackAllocator.h
XLN/Core/Foundation/: DataStream.cpp  DataStream.h  EventExecutor.cpp  EventExecutor.h  FoundationSDM.cpp  FoundationSDM.h  FrameExecutor.cpp  FrameExecutor.h  Fwd.h  Log.cpp  Log.h  Service.cpp  Service.h  ServiceMgr.cpp  ServiceMgr.h  ThreadPool.cpp  ThreadPool.h  ThreadedExecutor.cpp  ThreadedExecutor.h
XLN/Core/Foundation/Executor/: CPUThreadPoolExecutor.cpp  CPUThreadPoolExecutor.h  IOThreadPoolExecutor.cpp  IOThreadPoolExecutor.h  ThreadPoolExecutor.cpp  ThreadPoolExecutor.h
XLN/Core/Foundation/Message/: BaseMessage.cpp  BaseMessage.h  IMessage.cpp  IMessage.h
XLN/Core/Foundation/Service/: FileSystemService.cpp  FileSystemService.h  LogService.cpp  LogService.h
XLN/Core/Foundation/Task/: BlockingQueue.h  EventDispatcher.cpp  EventDispatcher.h  EventHandler.cpp  EventHandler.h  FrameRunner.cpp  FrameRunner.h  LifoSemBlockingQueue.h  MPMCTaskRunner.cpp  MPMCTaskRunner.h  Task.cpp  Task.h  TaskAllocator.cpp  TaskAllocator.h  TaskBarrierBlockingQueue.h  TaskConsumer.cpp  TaskConsumer.h  TaskHandler.cpp  TaskHandler.h  TaskProcessor.cpp  TaskProcessor.h  TaskQueue.cpp  TaskQueue.h  TaskRunner.cpp  TaskRunner.h  TaskThread.cpp  TaskThread.h
XLN/Core/Framework/: Application.cpp  Application.h  AssetService.cpp  AssetService.h  ConfigService.cpp  ConfigService.h  ExecutorService.cpp  ExecutorService.h  Fwd.h  RenderFrame.cpp  RenderFrame.h  System.cpp  System.h  SystemFactory.cpp  SystemFactory.h  SystemFactoryService.cpp  SystemFactoryService.h
XLN/Core/Network/: Fwd.h
XLN/Core/Network/Acceptor/: Acceptor.cpp  Acceptor.h
XLN/Core/Platform/: Fwd.h  PlatformService.cpp  PlatformService.h
XLN/Core/Platform/android/: build.gradle
XLN/Core/Platform/android/src/main/: AndroidManifest.xml
XLN/Core/Platform/android/src/main/cpp/: JavaClassObj.cpp  JavaClassObj.h  Jni.cpp  Jni.h  JniMethodType.cpp  JniMethodType.h  JniObject.h  JniSignature.h  LogServiceAndroid.cpp  LogServiceAndroid.h  PlatformServiceAndroid.cpp  PlatformServiceAndroid.h
XLN/Core/Platform/android/src/main/res/values/: strings.xml
XLN/Core/Platform/ios/: LogServiceiOS.h  LogServiceiOS.mm  PlatformServiceiOS.h  PlatformServiceiOS.mm
XLN/Core/Platform/linux/: PlatformServiceLinux.cpp  PlatformServiceLinux.h
XLN/Core/Platform/win/: PlatformServiceWin.cpp  PlatformServiceWin.h
XLN/Core/Utility/: Base64.h  ClassInfo.h  Observer.cpp  Observer.h  Pool.h  RTTI.cpp  RTTI.h  SharedPtr.h  StringTool.cpp  StringTool.h  UniqueID.cpp  UniqueID.h  Util.cpp  Util.h
XLN/Network/: ActorService.cpp  ActorService.h  CMakeLists.txt  GrpcServer.cpp  GrpcServer.h  GrpcService.cpp  GrpcService.h  NetworkService.cpp  NetworkService.h
XLN/React/: CMakeLists.txt  ReactService.cpp  ReactService.h  WebViewMessage.cpp  WebViewMessage.h
XLN/React/XLNReactWebView/: MyRCTWebView.h  MyRCTWebView.mm  MyRCTWebViewManager.h  MyRCTWebViewManager.m  ReactWebview.android.js  ReactWebview.ios.js  XLNReactWebView.android.js  XLNReactWebView.h  XLNReactWebView.ios.js  XLNReactWebView.m  build.gradle  package.json
XLN/React/XLNReactWebView/XLNReactWebView.xcodeproj/: project.pbxproj
XLN/React/XLNReactWebView/XLNReactWebView.xcodeproj/xcuserdata/rexlien.xcuserdatad/xcschemes/: XLNReactWebView.xcscheme  xcschememanagement.plist
XLN/React/XLNReactWebView/src/androidTest/java/xln/react/: ExampleInstrumentedTest.java
XLN/React/XLNReactWebView/src/main/: AndroidManifest.xml
XLN/React/XLNReactWebView/src/main/java/xln/react/: Jni.java  WebViewManager.java
XLN/React/XLNReactWebView/src/main/res/values/: strings.xml
XLN/React/XLNReactWebView/src/test/java/xln/react/: ExampleUnitTest.java
XLN/Server/: CMakeLists.txt  MySQLService.cpp  MySQLService.h  ServerApplication.cpp  ServerApplication.h  ServerClientApplication.cpp  ServerClientApplication.h  ServerClientExecutorService.cpp  ServerClientExecutorService.h  ServerExecutorService.cpp  ServerExecutorService.h
XLN/Server/Thrift/: ThriftApplication.cpp  ThriftApplication.h  ThriftMuxService.cpp  ThriftMuxService.h
dockcross/: build_xln_linux64.sh  xln_dockcross
(+33 files in other folders)
