if(XLN_BUILD_TEST)
    add_subdirectory(GTest)
    if(IOS)
        add_subdirectory(TestClient/TestIOS)
    elseif(ANDROID)
        add_subdirectory(TestClient/TestAndroid/TestBed/app)
    elseif(MSVC)
        add_subdirectory(TestServer/TestServer)
        add_subdirectory(TestServer/TestServerClient)
    elseif(LINUX_PC)
        add_subdirectory(TestServer/TestServer)
        add_subdirectory(TestServer/TestServerClient)
    endif()
endif()